<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="welcome_msg">"My Nanodegree Apps!"</string>
    <string name="proj1_title">"POPULAR MOVIES"</string>
    <string name="proj2_title">"STOCK HAWK"</string>
    <string name="proj3_title">"BUILD IT BETTER"</string>
    <string name="proj4_title">"MAKE YOUR APP MATERIAL"</string>
    <string name="proj5_title">"GO UBIQUITOUS"</string>
    <string name="proj6_title">"CAPSTONE"</string>
    <string name="toast_common_txt">"This button will launch my "</string>

</resources>
