<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    tools:context="com.example.piggy.myportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/welcome_msg"
        android:textSize="24sp"
        android:textColor="@color/colorButton"
        android:textAlignment="center" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                style="@style/ButtonStyle"
                android:text="@string/proj1_title"
                android:id="@+id/proj1_bt"
                android:onClick="launchProj1"/>
            <Button
                style="@style/ButtonStyle"
                android:text="@string/proj2_title"
                android:id="@+id/proj2_bt"
                android:onClick="launchProj2"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/proj3_title"
                android:id="@+id/proj3_bt"
                android:onClick="launchProj3"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/proj4_title"
                android:id="@+id/proj4_bt"
                android:onClick="launchProj4"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/proj5_title"
                android:id="@+id/proj5_bt"
                android:onClick="launchProj5"/>

            <Button
                style="@style/ButtonStyle"
                android:text="@string/proj6_title"
                android:id="@+id/proj6_bt"
                android:onClick="launchProj6"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
